[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pccommon"
dynamic = ["version"]
description = "Planetary Computer API - Common."
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "azure-data-tables>=12.5.0",
    "azure-identity>=1.16.1",
    "azure-storage-blob>=12.20.0",
    "cachetools~=5.3",
    "fastapi==0.112.3",
    "html-sanitizer>=2.4.4",
    "idna>=3.7.0",
    "lxml_html_clean>=0.1.0",
    "opencensus-ext-azure>=1.1.13",
    "opencensus-ext-logging>=0.1.1",
    "orjson>=3.10.4",
    "pydantic-settings>=2.3",
    "pydantic>=2.7",
    "pyhumps>=3.5.3",
    "redis>=4.6.0",
    "requests>=2.32.3",
    "starlette>=0.37.2",
    "types-cachetools>=4.2.9",
    "urllib3>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "types-redis",
    "types-requests",
]

[project.scripts]
pcapis = "pccommon.cli:cli"

[tool.hatch.version]
path = "pccommon/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pccommon",
]
