[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcstac"
dynamic = ["version"]
description = "Planetary Computer API - STAC."
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "idna>=3.7.0",
    "orjson==3.10.4",
    "pypgstac[psycopg]>=0.8.5,<0.9",
    "pystac==1.10.1",
    "stac-fastapi.api==3.0.0b2",
    "stac-fastapi.extensions==3.0.0b2",
    "stac-fastapi.pgstac==3.0.0a4",
    "stac-fastapi.types==3.0.0b2",
    "typing_extensions>=4.6.1",
    "urllib3>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "types-requests",
]
server = [
    "uvicorn[standard]==0.30.1",
]

[tool.hatch.version]
path = "pcstac/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pcstac",
]
