[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pctiler"
dynamic = ["version"]
description = "Planetary Computer API - Tiler."
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "fastapi-slim==0.111.0",
    "geojson-pydantic==1.1.0",
    "idna>=3.7.0",
    "importlib_resources>=1.1.0;python_version<'3.9'",
    "jinja2==3.1.5",
    "matplotlib==3.9.0",
    "orjson==3.10.4",
    "pillow==10.3.0",
    "planetary-computer==1.0.0",
    "psycopg[binary,pool]",
    "pydantic>=2.7,<2.8",
    "pystac==1.10.1",
    "rasterio==1.3.10",
    "requests==2.32.3",
    "titiler.core==0.18.3",
    "titiler.mosaic==0.18.3",
    "titiler.pgstac==1.3.0",
]

[project.optional-dependencies]
dev = [
    "types-requests",
]
server = [
    "uvicorn[standard]==0.30.1",
]

[tool.hatch.version]
path = "pctiler/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pctiler",
]
